--- a/tests.ipynb
+++ b/tests.ipynb
@@ -6,28 +6,26 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "OSError",
-     "evalue": "[WinError 1455] The paging file is too small for this operation to complete. Error loading \"c:\\Users\\otto\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\torch\\lib\\cusolver64_11.dll\" or one of its dependencies.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mOSError\u001b[0m                                   Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [1], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mtorch\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mHelper\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mHelperClasses\u001b[39;00m \u001b[39mimport\u001b[39;00m Direction, Point, Board, Snake\n\u001b[0;32m      4\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mSnakeGameClass\u001b[39;00m \u001b[39mimport\u001b[39;00m SnakeGame\n",
-      "File \u001b[1;32mc:\\Users\\otto\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\torch\\__init__.py:128\u001b[0m\n\u001b[0;32m    126\u001b[0m     err \u001b[39m=\u001b[39m ctypes\u001b[39m.\u001b[39mWinError(last_error)\n\u001b[0;32m    127\u001b[0m     err\u001b[39m.\u001b[39mstrerror \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m Error loading \u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mdll\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m\u001b[39m or one of its dependencies.\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m--> 128\u001b[0m     \u001b[39mraise\u001b[39;00m err\n\u001b[0;32m    129\u001b[0m \u001b[39melif\u001b[39;00m res \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m    130\u001b[0m     is_loaded \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m\n",
-      "\u001b[1;31mOSError\u001b[0m: [WinError 1455] The paging file is too small for this operation to complete. Error loading \"c:\\Users\\otto\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\torch\\lib\\cusolver64_11.dll\" or one of its dependencies."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pygame 2.1.2 (SDL 2.0.18, Python 3.9.7)\n",
+      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
     "import torch\n",
-    "from Helper.HelperClasses import Direction, Point, Board, Snake\n",
-    "from SnakeGameClass import SnakeGame"
+    "import tensorflow as tf\n",
+    "from HelperClasses import Direction, Point, Board, Snake\n",
+    "from SnakeGameClass import SnakeGame\n",
+    "import tensorflow as tf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,26 +37,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "   0  1  2  3  4  5  6  7  8  9\n",
-       "0  0  0  0  0  0  0  0  0  0  0\n",
-       "1  0  0  0  0  0  0  0  0  0  0\n",
-       "2  0  0  0  0  0  0  0  2  0  0\n",
-       "3  0  0  0  0  0  0  0  0  0  0\n",
-       "4  0  0  0  0  0  0  0  0  0  0\n",
-       "5  0  0  0  1  1  1  0  0  0  0\n",
-       "6  0  0  0  0  0  0  0  0  0  0\n",
-       "7  0  0  0  0  0  0  0  0  0  0\n",
-       "8  0  0  0  0  0  0  0  0  0  0\n",
-       "9  0  0  0  0  0  0  0  0  0  0"
+       "     0    1    2    3    4    5    6    7    8    9\n",
+       "0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       "1  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  1.0  0.0\n",
+       "2  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       "3  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       "4  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       "5  0.0  0.0  0.0  0.5  0.5  0.5  0.0  0.0  0.0  0.0\n",
+       "6  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       "7  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       "8  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       "9  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +87,7 @@
        "torch.Size([1, 3, 10, 10])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,26 +100,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "   0  1  2  3  4  5  6  7  8  9\n",
-       "0  0  0  0  0  0  0  0  0  0  0\n",
-       "1  0  0  0  0  0  0  0  0  0  0\n",
-       "2  0  0  0  0  0  0  0  2  0  0\n",
-       "3  0  0  0  0  0  0  0  0  0  0\n",
-       "4  0  0  0  0  0  0  0  0  0  0\n",
-       "5  0  0  0  0  1  1  1  0  0  0\n",
-       "6  0  0  0  0  0  0  0  0  0  0\n",
-       "7  0  0  0  0  0  0  0  0  0  0\n",
-       "8  0  0  0  0  0  0  0  0  0  0\n",
-       "9  0  0  0  0  0  0  0  0  0  0"
+       "     0    1    2    3    4    5    6    7    8    9\n",
+       "0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       "1  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  1.0  0.0\n",
+       "2  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       "3  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       "4  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       "5  0.0  0.0  0.0  0.0  0.5  0.5  0.5  0.0  0.0  0.0\n",
+       "6  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       "7  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       "8  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       "9  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -150,13 +148,18 @@
    "source": [
     "b_t = board.to_tensor(channels=1)\n",
     "b2_t = b2.to_tensor(channels=1)\n",
+    "b_tf = board.to_tensorflow_tensor()\n",
+    "\n",
+    "b_tf_stacked = tf.stack((b_tf,b_tf,b_tf,b_tf), axis=-1)\n",
+    "# b_tf_stacked = tf.stack((b_tf,b_tf), axis=-1)\n",
+    "b_tf_stacked = tf.expand_dims(b_tf_stacked, axis=0)\n",
     "print(b_t.shape)\n",
     "print(b2_t.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +168,7 @@
        "torch.Size([1, 2, 10, 10])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,21 +194,38 @@
     "    torch.nn.Linear(16*2*2,3), # For 10x10 grid\n",
     "    # torch.nn.Linear(16*3*3,3), # For 20x20 grid\n",
     ")\n",
+    "\n",
+    "tf_model = tf.keras.Sequential([\n",
+    "    tf.keras.layers.Conv2D(16, 5, activation=\"relu\"),\n",
+    "    tf.keras.layers.Conv2D(32, 3, activation=\"relu\"),\n",
+    "    tf.keras.layers.Flatten(),\n",
+    "    tf.keras.layers.Dense(32*4, activation=\"relu\"),\n",
+    "    tf.keras.layers.Dense(4, activation=\"linear\")\n",
+    "    \n",
+    "])\n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 10, 10, 4)\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "torch.Size([1, 3])"
+       "TensorShape([1, 4])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -220,59 +240,30 @@
    ],
    "source": [
     "# out = net(tens)\n",
-    "out = net(stacked)\n",
-    "\n",
+    "# out = net(stacked)\n",
+    "# tf_model.layers[0](b_tf_stacked)\n",
+    "# out.shape\n",
+    "print(b_tf_stacked.shape)\n",
+    "out = tf_model(b_tf_stacked)\n",
     "out.shape\n",
-    "# out"
+    "# tf.argmax(out[0]).numpy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndexError",
-     "evalue": "index 10 is out of bounds for dimension 0 with size 10",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [12], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m b_t[\u001b[39m10\u001b[39;49m]\n\u001b[0;32m      2\u001b[0m b2_t[\u001b[39m10\u001b[39m]\n\u001b[0;32m      4\u001b[0m stacked[\u001b[39m0\u001b[39m][\u001b[39m10\u001b[39m]\n",
-      "\u001b[1;31mIndexError\u001b[0m: index 10 is out of bounds for dimension 0 with size 10"
-     ]
-    }
-   ],
-   "source": [
-    "b_t[10]\n",
-    "b2_t[10]\n",
-    "\n",
-    "stacked[0][10]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[-0.0955, -0.2803, -0.0384],\n",
-       "        [-0.0955, -0.2803, -0.0384]], grad_fn=<AddmmBackward0>)"
+       "tensor([[-0.0742,  0.0941,  0.0351],\n",
+       "        [-0.0742,  0.0941,  0.0351]], grad_fn=<AddmmBackward0>)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
     }
    ],
    "source": [
@@ -301,12 +292,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13 (tags/v3.9.13:6de2ca5, May 17 2022, 16:36:42) [MSC v.1929 64 bit (AMD64)]"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "b28fa9c21d578ac68763e359e809f0d45ea107a0cd9fd4c3da0bc1f5503f5b7c"
+    "hash": "81794d4967e6c3204c66dcd87b604927b115b27c00565d3d43f05ba2f3a2cb0d"
    }
   }
  },
